# azure-data-factory-generator

./: .gitignore  MANIFEST.in  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  tests.yml
CICD/: pipeline_generation.yml  pipeline_generation_production.yml  pipeline_generation_template.yml
azure_data_factory_generator/: base.py  initialise.py  schedule.py  sftp.py
azure_data_factory_generator/activities/: data_lake.py
azure_data_factory_generator/templates/dataset/: __init__.py  config_table.py  data_lake.py  ftp.py  sftp.py
azure_data_factory_generator/templates/integration_runtime/: self_hosted.py
azure_data_factory_generator/templates/linked_service/: __init__.py  config_table_storage.py  data_lake.py  ftp.py  sftp.py
azure_data_factory_generator/templates/trigger/: schedule.py
deployment/: add_objects.sh  clean_objects.sh
docs/user/: ADFGUSAGE.md  Connections.md  Triggers.md  Usage.md
docs/user/assets/: sftp_pipeline.drawio
example/configs/: api_parameter.json  sftp_basic.json
example/pipelines/: FTP.json  SFTP basic example.json  Table Storage.json
example/test_configs/: sftp_basic.json  sftp_basic_shir.json
example/trigger/: Schedule.json
example_configs/: api_parameter.json  sftp_basic.json
in_progress/: api.py  create_pipelines.py
ingeniiadfg/: __main__.py  base.py  initialise.py  main.py  sftp.py
pipeline_generation/examples/dataset/: SFTPFile.json  SFTPFolder.json
tests/: test_generations.py  test_schedule_generation.py
(+78 files in other folders)
