[metadata]
name = ingeniiadfg
url = https://github.com/ingenii-solutions/azure-data-factory-generator
author = Greg Atkins
author_email = greg@ingenii.dev
description = Generate Azure Data Factory objects from configuration
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
packages = find:

[options.package_data]